# grpc-rust-bidirectional-streamin

./: Cargo.toml  README.md  build.rs
proto/: calculator.proto
src/: client.rs  server.rs
